<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">

    <Button
        android:id="@+id/btncal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:text="@string/btncali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grupo" />

    <TextView
        android:id="@+id/txtpregunta"
        android:layout_width="340dp"
        android:layout_height="106dp"
        android:layout_marginTop="88dp"
        android:text="@string/titulo2"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnatras"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_marginTop="116dp"
        android:text="@string/atras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grupo" />

    <RadioGroup
        android:id="@+id/grupo"
        android:layout_width="0dp"
        android:layout_height="164dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpregunta">

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:text="@string/res1"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="389dp"
            android:layout_height="wrap_content"
            android:text="@string/res2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="390dp"
            android:layout_height="59dp"
            android:text="@string/res3"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnsig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grupo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="118dp"
        android:layout_height="39dp"
        android:gravity="center|center_horizontal"
        android:text="@string/examen"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>