<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="118dp"
        android:layout_height="39dp"
        android:gravity="center|center_horizontal"
        android:text="@string/examen"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="52dp" />

    <TextView
        android:id="@+id/txtpregunta"
        android:layout_width="340dp"
        android:layout_height="106dp"
        android:textColor="#000000"
        tools:ignore="TextSizeCheck"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="155dp" />

    <Button
        android:id="@+id/btnatras"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:text="@string/atras"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="565dp" />

    <Button
        android:id="@+id/btnsig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="565dp" />

    <RadioGroup
        android:id="@+id/grupo"
        android:layout_width="411dp"
        android:layout_height="176dp"
        tools:layout_editor_absoluteY="305dp">

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="150dp"
            android:layout_height="49dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="150dp"
            android:layout_height="52dp" />

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="152dp"
            android:layout_height="68dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btncal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btncali"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="653dp" />

</androidx.constraintlayout.widget.ConstraintLayout>